[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cached-yfinance"
version = "0.1.0"
description = "A caching wrapper around yfinance for improved performance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["finance", "yfinance", "cache", "stock", "market", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.8"
dependencies = [
    "pandas>=1.5.0",
    "pyarrow>=17.0.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
market-calendars = ["pandas-market-calendars>=4.0.0"]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/cached-yfinance"
Repository = "https://github.com/yourusername/cached-yfinance"
Issues = "https://github.com/yourusername/cached-yfinance/issues"
Documentation = "https://github.com/yourusername/cached-yfinance#readme"

[tool.hatch.build.targets.wheel]
packages = ["cached_yfinance"]

[tool.black]
line-length = 120
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 120

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=cached_yfinance --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 120
target-version = "py38"
