[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cached-yfinance"
version = "0.1.3"
description = "A caching wrapper around yfinance for improved performance"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["finance", "yfinance", "cache", "stock", "market", "data"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">=3.10"
dependencies = [
    "pandas>=1.5.0",
    "pandas-market-calendars>=5.1.3",
    "pyarrow>=17.0.0",
    "yfinance>=0.2.0",
]

[project.optional-dependencies]
examples = [
    "matplotlib>=3.5.0"
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "mypy>=1.18.0",
    "ruff>=0.14.0",
    "pandas-stubs>=2.3.2.250926",
    "matplotlib>=3.5.0"
]

[project.urls]
Homepage = "https://github.com/markcallen/cached-yfinance"
Repository = "https://github.com/markcallen/cached-yfinance"
Issues = "https://github.com/markcallen/cached-yfinance/issues"
Documentation = "https://github.com/markcallen/cached-yfinance#readme"

[tool.hatch.build.targets.wheel]
packages = ["cached_yfinance"]

[tool.black]
line-length = 88
target-version = ['py310']


[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = false

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=cached_yfinance --cov-report=term-missing --cov-report=html"

[tool.ruff]
line-length = 88
indent-width = 4
target-version = "py310"

[tool.ruff.lint]
select = ["I", "E4", "E7", "E9", "F"]

[tool.ruff.lint.isort]
lines-after-imports = 2
